<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!-- tạo phần header bao gồm: TopNavigation and slider cho app-->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:contentDescription="null"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_appl" />

            <TextView
                android:id="@+id/recommend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/recommend"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/trend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/trend"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/outstanding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/outstanding"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search" />
        </LinearLayout>
        <!--            End navbar-->
        <!--            start slider-->
        <ViewFlipper
            android:id="@+id/vf"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:visibility="visible" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_story"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <GridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:horizontalSpacing="10dp"
                android:numColumns="3"
                android:verticalSpacing="20dp">

            </GridView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tacphamkinhdien"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <GridView
                android:id="@+id/gridview2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:horizontalSpacing="10dp"
                android:numColumns="3"
                android:verticalSpacing="20dp">

            </GridView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maybeulike"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommend_recycleview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>